<resources>
    <string name="app_name">smallPos</string>
    <!--indexactivity-->
    <string name="titile">小猫农贸</string>
    <string name="MerchantManagement">商户管理</string>
    <string name="settleaccounts">结账</string>
    <string name="chargeback">退单</string>
    <string name="cashbox">钱箱</string>
    <string name="all">所有</string>
    <string name="meat">肉类</string>
    <string name="greens">时蔬</string>
    <string name="birds">禽类</string>
    <string name="seafood">海鲜</string>
    <string name="dryCargo">干货</string>
    <!--xlistview-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <!--activity_login-->
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="login">登录</string>
    <string name="changpassword">修改密码？</string>
    <!--activity_merchatmanagement-->
    <string name="userManagement">用户管理</string>
    <string name="cashierDesk">收银台</string>
    <string name="retailOrders">零售订单</string>
    <string name="productCategory">产品分类</string>
    <string name="shiftRecords">交班记录</string>
    <string name="saleBill">销售账单</string>
</resources>
