<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/username"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="207dp"
            android:layout_marginStart="207dp"
            android:layout_marginTop="29dp" />
        <EditText
            android:id="@+id/username_edit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_above="@+id/textView2"
            android:text="admin"

            android:layout_alignLeft="@+id/password_edit"
            android:layout_alignStart="@+id/password_edit" />
        <EditText
            android:id="@+id/password_edit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="0"
            android:inputType="numberPassword"
            android:layout_alignBottom="@+id/textView2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/password"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:layout_marginTop="28dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_but"
            android:layout_below="@+id/password_edit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp" />
        <View
            android:layout_width="70dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_alignLeft="@+id/changepassword_text"
            android:layout_alignStart="@+id/changepassword_text"
            android:layout_below="@+id/changepassword_text" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/changpassword"
            android:id="@+id/changepassword_text"
            android:layout_marginLeft="85dp"
            android:layout_marginStart="85dp"
            android:layout_below="@+id/password_edit"
            android:layout_toRightOf="@+id/password_edit"
            android:layout_toEndOf="@+id/password_edit"
            android:layout_marginTop="28dp" />

    </RelativeLayout>

</LinearLayout>